[gd_scene load_steps=4 format=3 uid="uid://ci1n7rtuxnlxn"]

[ext_resource type="Script" path="res://scenes/UI/controls_settings.gd" id="1_y8pw7"]
[ext_resource type="Script" path="res://scenes/UI/KeymapButton.gd" id="2_3mbb7"]

[sub_resource type="LabelSettings" id="LabelSettings_ijs00"]
font_size = 39

[node name="controls_settings" type="Control" node_paths=PackedStringArray("mouse_sensitivity_spinbox", "mouse_sensitivity_slider", "mouse_invert_x_checkbox", "mouse_invert_y_checkbox")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_y8pw7")
mouse_sensitivity_spinbox = NodePath("VBoxContainer/HBoxContainer/SpinBox")
mouse_sensitivity_slider = NodePath("VBoxContainer/HBoxContainer2/HSlider")
mouse_invert_x_checkbox = NodePath("VBoxContainer/HBoxContainer3/Invert X Checkbox")
mouse_invert_y_checkbox = NodePath("VBoxContainer/HBoxContainer4/Invert Y Checkbox")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.3
anchor_top = 0.1
anchor_right = 0.7
anchor_bottom = 0.9
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Mouse Settings"
label_settings = SubResource("LabelSettings_ijs00")

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Mouse Sensitivity: "

[node name="SpinBox" type="SpinBox" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
min_value = 0.1
step = 0.0
value = 0.1
custom_arrow_step = 0.1

[node name="Label2" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Dots Per Degree"

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Low"

[node name="HSlider" type="HSlider" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
max_value = 0.999
step = 0.0
value = 0.999

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "High"

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Invert X Checkbox" type="CheckBox" parent="VBoxContainer/HBoxContainer3"]
layout_mode = 2
text = "Invert X"

[node name="HBoxContainer4" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Invert Y Checkbox" type="CheckBox" parent="VBoxContainer/HBoxContainer4"]
layout_mode = 2
text = "Invert Y"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Key Mapping Settings"
label_settings = SubResource("LabelSettings_ijs00")

[node name="HSeparator3" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="Label3" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Keymaps (Click to Rebind):"

[node name="HBoxContainer5" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 57

[node name="HBoxContainer7" type="VBoxContainer" parent="VBoxContainer/HBoxContainer5"]
layout_mode = 2
size_flags_horizontal = 0

[node name="HBoxContainer5" type="HBoxContainer" parent="VBoxContainer/HBoxContainer5/HBoxContainer7"]
layout_mode = 2
alignment = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer5/HBoxContainer7/HBoxContainer5"]
layout_mode = 2
text = "Forwards:"

[node name="Button" type="Button" parent="VBoxContainer/HBoxContainer5/HBoxContainer7/HBoxContainer5"]
layout_mode = 2
text = "W"
script = ExtResource("2_3mbb7")
mapping_aciton_name = "move_forwards"

[node name="HBoxContainer6" type="HBoxContainer" parent="VBoxContainer/HBoxContainer5/HBoxContainer7"]
layout_mode = 2
alignment = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer5/HBoxContainer7/HBoxContainer6"]
layout_mode = 2
text = "Left:"

[node name="Button" type="Button" parent="VBoxContainer/HBoxContainer5/HBoxContainer7/HBoxContainer6"]
layout_mode = 2
text = "A"
script = ExtResource("2_3mbb7")
mapping_aciton_name = "move_left"

[node name="HBoxContainer7" type="HBoxContainer" parent="VBoxContainer/HBoxContainer5/HBoxContainer7"]
layout_mode = 2
alignment = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer5/HBoxContainer7/HBoxContainer7"]
layout_mode = 2
text = "Backwards: "

[node name="Button" type="Button" parent="VBoxContainer/HBoxContainer5/HBoxContainer7/HBoxContainer7"]
layout_mode = 2
text = "S"
script = ExtResource("2_3mbb7")
mapping_aciton_name = "move_backwards"

[node name="HBoxContainer8" type="HBoxContainer" parent="VBoxContainer/HBoxContainer5/HBoxContainer7"]
layout_mode = 2
alignment = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer5/HBoxContainer7/HBoxContainer8"]
layout_mode = 2
text = "Right"

[node name="Button" type="Button" parent="VBoxContainer/HBoxContainer5/HBoxContainer7/HBoxContainer8"]
layout_mode = 2
text = "D"
script = ExtResource("2_3mbb7")
mapping_aciton_name = "move_right"

[node name="HBoxContainer9" type="HBoxContainer" parent="VBoxContainer/HBoxContainer5/HBoxContainer7"]
layout_mode = 2
alignment = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer5/HBoxContainer7/HBoxContainer9"]
layout_mode = 2
text = "Jump: "

[node name="Button" type="Button" parent="VBoxContainer/HBoxContainer5/HBoxContainer7/HBoxContainer9"]
layout_mode = 2
text = "Space"
script = ExtResource("2_3mbb7")
mapping_aciton_name = "jump"

[node name="HBoxContainer10" type="HBoxContainer" parent="VBoxContainer/HBoxContainer5/HBoxContainer7"]
layout_mode = 2
alignment = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer5/HBoxContainer7/HBoxContainer10"]
layout_mode = 2
text = "Dash: "

[node name="Button" type="Button" parent="VBoxContainer/HBoxContainer5/HBoxContainer7/HBoxContainer10"]
layout_mode = 2
text = "Left Shift"
script = ExtResource("2_3mbb7")
mapping_aciton_name = "dash"

[node name="HBoxContainer11" type="HBoxContainer" parent="VBoxContainer/HBoxContainer5/HBoxContainer7"]
layout_mode = 2
alignment = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer5/HBoxContainer7/HBoxContainer11"]
layout_mode = 2
text = "Pause: "

[node name="Button" type="Button" parent="VBoxContainer/HBoxContainer5/HBoxContainer7/HBoxContainer11"]
layout_mode = 2
text = "Escape"
script = ExtResource("2_3mbb7")
mapping_aciton_name = "pause"

[node name="HBoxContainer8" type="VBoxContainer" parent="VBoxContainer/HBoxContainer5"]
layout_mode = 2
size_flags_horizontal = 0

[node name="HBoxContainer5" type="HBoxContainer" parent="VBoxContainer/HBoxContainer5/HBoxContainer8"]
layout_mode = 2
alignment = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer5/HBoxContainer8/HBoxContainer5"]
layout_mode = 2
text = "Shoot:"

[node name="Button" type="Button" parent="VBoxContainer/HBoxContainer5/HBoxContainer8/HBoxContainer5"]
layout_mode = 2
text = "Left Mouse"
script = ExtResource("2_3mbb7")
mapping_aciton_name = "fire"

[node name="Label2" type="Label" parent="VBoxContainer/HBoxContainer5/HBoxContainer8/HBoxContainer5"]
layout_mode = 2
text = " or "

[node name="Button2" type="Button" parent="VBoxContainer/HBoxContainer5/HBoxContainer8/HBoxContainer5"]
layout_mode = 2
text = "Right Mouse"
script = ExtResource("2_3mbb7")
mapping_aciton_name = "fire"
mapping_show_index = 1

[connection signal="focus_entered" from="VBoxContainer/HBoxContainer/SpinBox" to="." method="_on_spin_box_focus_entered"]
[connection signal="gui_input" from="VBoxContainer/HBoxContainer/SpinBox" to="." method="_on_spin_box_gui_input"]
[connection signal="value_changed" from="VBoxContainer/HBoxContainer/SpinBox" to="." method="_on_spin_box_value_changed"]
[connection signal="drag_ended" from="VBoxContainer/HBoxContainer2/HSlider" to="." method="_on_h_slider_drag_ended"]
[connection signal="focus_entered" from="VBoxContainer/HBoxContainer2/HSlider" to="." method="_on_h_slider_focus_entered"]
[connection signal="value_changed" from="VBoxContainer/HBoxContainer2/HSlider" to="." method="_on_h_slider_value_changed"]
[connection signal="toggled" from="VBoxContainer/HBoxContainer3/Invert X Checkbox" to="." method="_on_invert_x_checkbox_toggled"]
[connection signal="toggled" from="VBoxContainer/HBoxContainer4/Invert Y Checkbox" to="." method="_on_invert_y_checkbox_toggled"]
